--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "new": "hexo new",
     "prod": "hexo g -d",
-    "build": "hexo build",
+    "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server"
@@ -26,6 +26,7 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-butterfly": "^4.7.0"
+    "hexo-theme-butterfly": "^4.7.0",
+    "hexo-util": "^3.0.1"
   }
 }
