--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
 name: Deploy
 
 on:
-  push:
-    branches:
-      - gh-pages # default branch
+  workflow_run:
+    workflows: [Build]
+    branches: [master]
+    types:
+      - completed
 
 jobs:
   pages:
@@ -12,7 +14,9 @@ jobs:
       contents: write
     steps:
       - name: Checkout    
-        uses: actions/checkout@v2    #这里使用了github官方提供的action,checkout项目到虚拟机上
+        uses: actions/checkout@v3    #这里使用了github官方提供的action,checkout项目到虚拟机上
+        with:
+          ref: gh-pages
 
       # 利用action把build好的文件上传到服务器/var/www/react-app路径下,需要确认此目录已在服务端创建
       - name: Deploy file to tencent
