--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,9 @@ jobs:
       - name: Build
         run: npm run build
       - name: Push To gh-pages
+        # https://github.com/peaceiris/actions-gh-pages/tree/v3/
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.HEXO_KEY }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           commit_message: ${{ github.event.head_commit.message }}
