--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,13 @@ jobs:
       - name: Checkout    
         uses: actions/checkout@v3  # 这里使用了github官方提供的action,checkout项目到虚拟机上
         with:
-          ref: gh-pages
+          ref: gh-pages  # 检出 gh-pages 分支下的内容
 
       - name: Deploy file to tencent
         uses: wlixcc/SFTP-Deploy-Action@v1.0 
         with:  
-          username: '${{ secrets.SERVER_USER }}'  # ssh user name
-          server: '${{ secrets.SERVER_HOST }}'  # 引用之前创建好的secret
-          ssh_private_key: ${{ secrets.PRIVITE_KEY }}  # 引用之前创建好的secret
-          local_path: './*'  # 对应我们项目build的文件夹路径
-          remote_path: '${{ secrets.TARGET_PATH }}' # 远程服务器路径
+          username: '${{ secrets.SERVER_USER }}'       # ssh user name
+          server: '${{ secrets.SERVER_HOST }}'         # 服务器地址
+          ssh_private_key: ${{ secrets.PRIVITE_KEY }}  # 引用之前创建好的 secret
+          local_path: './*'                            # 对应 hexo build 后的文件夹
+          remote_path: '${{ secrets.TARGET_PATH }}'    # 远程服务器路径
